Added private option for book and fixed minor bugs

--- a/app/src/main/res/layout/like_item.xml
+++ b/app/src/main/res/layout/like_item.xml
@@ -4,11 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="10dp"
-    app:cardCornerRadius="2dp">
+    app:cardCornerRadius="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/item"
         android:layout_width="match_parent"
+        android:background="@color/light_green"
         android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
