--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="light_green">#D0FDD2</color>
     <color name="red">#ED3123</color>
     <color name="fade_black">#454545</color>
+    <color name="light_orange">#FFDD9D</color>
 </resources>
