--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
+    app:cardCornerRadius="30dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/sender_book"
         android:layout_width="70dp"
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@id/sender_photo"
         app:layout_constraintEnd_toStartOf="@id/swap_icon"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +41,7 @@
         android:src="@drawable/ic_swap"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/receiver_book"
-        app:layout_constraintStart_toEndOf="@id/sender_photo"
+        app:layout_constraintStart_toEndOf="@id/sender_book"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -41,6 +49,7 @@
         android:layout_width="70dp"
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/swap_icon"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,18 +68,22 @@
         android:id="@+id/accepted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_camera"
+        android:src="@drawable/ic_check_green"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@id/swap_icon"
-        app:layout_constraintStart_toStartOf="@id/swap_icon"/>
+        app:layout_constraintStart_toStartOf="@id/swap_icon"
+        app:layout_constraintEnd_toEndOf="@id/swap_icon"/>
 
     <ImageView
         android:id="@+id/declined"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_down_arrow"
+        android:src="@drawable/ic_remove"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/swap_icon"
-        app:layout_constraintStart_toStartOf="@id/swap_icon"/>
+        app:layout_constraintStart_toStartOf="@id/swap_icon"
+        app:layout_constraintEnd_toEndOf="@id/swap_icon"/>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
