--- a/app/src/main/res/layout/personal_book_item.xml
+++ b/app/src/main/res/layout/personal_book_item.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardCornerRadius="10dp"
     android:layout_marginStart="50dp"
     android:layout_marginEnd="50dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/light_orange">
 
         <ImageView
             android:id="@+id/thumbnail_personal"
             android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_height="160dp"
             android:maxWidth="140dp"
             android:maxHeight="140dp"
             android:src="@mipmap/ic_launcher"
