--- a/app/src/main/res/layout/swipe_card_item.xml
+++ b/app/src/main/res/layout/swipe_card_item.xml
@@ -1,103 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/fade_black"
-        app:layout_constraintStart_toStartOf="@id/thumbnail_image_swipe_view"
-        app:layout_constraintEnd_toEndOf="@id/thumbnail_image_swipe_view"
-        app:layout_constraintBottom_toTopOf="@id/thumbnail_image_swipe_view">
-
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_image_like"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_launcher"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/username_swipe_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:maxWidth="300dp"
-            android:text="@string/username"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/user_image_like"
-            app:layout_constraintStart_toEndOf="@id/user_image_like"
-            app:layout_constraintTop_toTopOf="@id/user_image_like" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    android:layout_height="match_parent"
+    android:background="?attr/selectableItemBackground"
+    android:foreground="?attr/selectableItemBackground"
+    app:cardUseCompatPadding="true"
+    app:cardPreventCornerOverlap="false"
+    app:cardCornerRadius="8dp"
+    app:cardBackgroundColor="@android:color/white">
 
     <ImageView
         android:id="@+id/thumbnail_image_swipe_view"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/fade_black"
-        app:layout_constraintStart_toStartOf="@id/thumbnail_image_swipe_view"
-        app:layout_constraintEnd_toEndOf="@id/thumbnail_image_swipe_view"
-        app:layout_constraintTop_toBottomOf="@id/thumbnail_image_swipe_view">
+        android:layout_gravity="bottom"
+        android:padding="16dp"
+        android:background="@drawable/gradation_black">
 
-        <TextView
-            android:id="@+id/book_title_swap_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="5dp"
-            android:maxWidth="300dp"
-            android:text="Book Title"
-            android:textSize="18sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/book_authors_swap_view"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/book_title_swap_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="360dp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="26sp"
+                android:text="Titlul cartii"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/book_authors_swap_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="360dp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:text="Autorii cartii"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/book_title_swap_view"
+                app:layout_constraintStart_toStartOf="@id/book_title_swap_view"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_image_like"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@mipmap/ic_launcher"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/book_authors_swap_view"
+                app:layout_constraintStart_toStartOf="@id/book_authors_swap_view"/>
+
+            <TextView
+                android:id="@+id/username_swipe_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="300dp"
+                android:textStyle="bold"
+                android:text="@string/username"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintStart_toEndOf="@id/user_image_like"
+                app:layout_constraintTop_toTopOf="@id/user_image_like"
+                app:layout_constraintBottom_toBottomOf="@id/user_image_like"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <TextView
-            android:id="@+id/book_authors_swap_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Book Authors"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@id/book_title_swap_view"
-            app:layout_constraintTop_toBottomOf="@id/book_title_swap_view"
-            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/left_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/overlay_black">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_dislike"
+                android:layout_gravity="center"
+                android:layout_margin="30dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/right_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/overlay_black">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_heart"
+                android:layout_gravity="center"
+                android:layout_margin="30dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+    </FrameLayout>
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
