--- a/app/src/main/res/layout/activity_profile_visualisation.xml
+++ b/app/src/main/res/layout/activity_profile_visualisation.xml
@@ -28,6 +28,7 @@
         android:id="@+id/user_image_like_view"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:src="@drawable/ic_user"
         app:layout_constraintTop_toBottomOf="@id/layout_like"/>
 
     <TextView
