--- a/app/src/main/res/layout/activity_swap.xml
+++ b/app/src/main/res/layout/activity_swap.xml
@@ -40,7 +40,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/ic_user"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -112,7 +112,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/ic_user"
                 app:layout_constraintTop_toBottomOf="@id/my_username_swap_view"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
