--- a/app/src/main/res/layout/swap_item.xml
+++ b/app/src/main/res/layout/swap_item.xml
@@ -36,7 +36,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="5dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_user"
             app:layout_constraintEnd_toStartOf="@id/username_swap_item"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
