--- a/app/src/main/res/layout/swipe_card_item.xml
+++ b/app/src/main/res/layout/swipe_card_item.xml
@@ -59,7 +59,7 @@
                 android:id="@+id/user_image_like"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/ic_user"
                 android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@id/book_authors_swap_view"
                 app:layout_constraintStart_toStartOf="@id/book_authors_swap_view"/>
