Added maps and videos

--- a/app/src/main/res/layout/activity_profile_visualisation.xml
+++ b/app/src/main/res/layout/activity_profile_visualisation.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             app:titleTextColor="@color/black"
             android:background="@color/orange"
+            app:menu="@menu/maps"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             app:navigationIcon="@drawable/ic_left_arrow"/>
 
